# python-project-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  README.md  example.env  pyproject.toml  {% if cookiecutter.include_docker == 'y' %}Dockerfile{% endif %}  {% if cookiecutter.include_docker == 'y' %}docker-compose.yml{% endif %}  {% if cookiecutter.include_pre_commit == 'y' %}.pre-commit-config.yaml{% endif %}
{{cookiecutter.project_slug}}/app/application/: exceptions.py
{{cookiecutter.project_slug}}/app/presentation/api/: main.py
{{cookiecutter.project_slug}}/app/presentation/api/routers/: __init__.py  health.py
{{cookiecutter.project_slug}}/tests/presentation/api/: test_health.py
{{cookiecutter.project_slug}}/{% if cookiecutter.include_github_actions == 'y' %}.github{% endif %}/workflows/: ci.yml  dependabot.yml
