[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "fastapi>=0.116.1,<0.117",
    "uvicorn>=0.35.0,<0.36",
    "pydantic>=2.10.6,<3",
    "pydantic-settings>=2.7.1,<3",
	"gunicorn>=23.0.0",
	"loguru>=0.7.3",
	"dependency-injector>=4.48.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=1.1.0,<1.2",
    "pytest-cov>=6.2.1,<7",
    "coverage>=7.5.0,<8",
    "pre-commit>=4.2.0,<5",
    "ipython>=9.4.0,<10",
    # Until https://github.com/astral-sh/ruff/issues/14118 is resolved
    "ruff @ git+https://github.com/matthewlloyd/ruff@0.12.0-f-string-consistent-quotes"
]

[tool.uv]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poe.tasks]
dev = { cmd = "uvicorn app.presentation.api.main:app --reload", help = "Runs the development server" }
test = { cmd = "pytest tests/", help = "Run tests" }
test-ci = { cmd = "pytest --cov app --cov-report term --cov-report xml:coverage.xml --cov-fail-under=80 --junit-xml=junit-test.xml", help = "Run tests for CI" }
test-cov = { cmd = "pytest --cov=app --cov-report=term-missing tests/", help = "Run tests with coverage" }
cov = { cmd = "coverage report --fail-under=80", help = "Generate coverage report" }
build-image = { cmd = "docker build --target ${TARGET:-production} -t {{cookiecutter.project_slug}}-{TARGET:-production} .", help = "Build docker image" }


[tool.poe.tasks.lint]
help = "Run linting tasks (flake, formatting etc...)"
sequence = [
    "ruff check"
]
default_item_type = "cmd"

[tool.poe.tasks.format]
help = "Run formatters"
sequence = ["ruff format", "ruff check --fix"]
default_item_type = "cmd"

[tool.poe.tasks.ci]
help = "Run all checks (test, lint, typecheck)"
sequence = ["lint", "test-cov", "cov"]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
f-string-consistent-quotes = true
